cmake_minimum_required(VERSION 3.5.0)

# Add individual test problems
add_subdirectory(DH_graph_1)
add_subdirectory(HMW_graph_CpvT)
add_subdirectory(HMW_graph_GvI)
add_subdirectory(HMW_graph_GvT)
add_subdirectory(HMW_graph_HvT)
add_subdirectory(HMW_graph_VvT)
add_subdirectory(HMW_test_1)
add_subdirectory(HMW_test_3)
add_subdirectory(ims)
add_subdirectory(issp)
add_subdirectory(stoichSub)
add_subdirectory(testWaterPDSS)
add_subdirectory(testWaterTP)
add_subdirectory(VPissp)
add_subdirectory(wtWater)

